--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,20 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="%PUBLIC_URL%/material_icons.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- for apple iphone -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/launcher-icon.png" sizes="512x512" />
+    <script>
+      // service workerが有効なら、service-worker.js を登録します
+//      if ('serviceWorker' in navigator) {
+//      navigator.serviceWorker.register('./service-worker.js').then(function() { console.log('Service Worker Registered'); });
+//      }
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
